--- a/template/message.html
+++ b/template/message.html
@@ -24,7 +24,7 @@
 </style>
 <body>
     <div class="logo">
-        <img src="{{url_for('public/img', 'OBJECT.png')}}" alt="tasteclan logo">
+        <img src="{{url_for('public', 'OBJECT.png')}}" alt="tasteclan logo">
         <p>Tasteclan</p>
     </div>
     <main>
